fix footer not to overlap with the main contents

--- a/www/css/less/_footer.less
+++ b/www/css/less/_footer.less
@@ -1,3 +1,12 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 180px;
+}
+
 footer {
   position: absolute;
   bottom: 0;
